--- a/src/pages/Cart/CartPage.css
+++ b/src/pages/Cart/CartPage.css
@@ -11,6 +11,7 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
+  z-index: 1;
 }
 
 .cart__title {
